compiler/testData/diagnostics/testsWithStdLib/annotations/strictfpOnClass.kt
<!WRONG_ANNOTATION_TARGET!>@kotlin.jvm.Strictfp<!> class A {

}

<!WRONG_ANNOTATION_TARGET!>@kotlin.jvm.Strictfp<!> object B {

}

<!WRONG_ANNOTATION_TARGET!>@kotlin.jvm.Strictfp<!> interface C {

}